[package]
name = "btrfs-rollback"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btrfs-rollback"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
libbtrfsutil = "0.5.2"
path-clean = "1.0.1"

[dependencies.clap]
version = "4.4.2"
features = ["derive"]

[dependencies.nix]
version = "0.26.2"
default-features = false
features = ["mount"]
